tests/snapshots/ops_lock__a_symlink_at_the_lock_path_is_refused_and_not_followed.snap
---
source: tests/ops_lock.rs
expression: shown
---
exit 2
ricepilot: refusing: the lock file must be a regular file you own, and this is a symlink. it was not followed or locked: anything else could have been planted to make ricepilot open, create or wait on some other file. nothing was changed. if no ricepilot is running, move it aside and run the command again (D74) (<HOME>/.run/ricepilot.lock) [R4]
